<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingBottom="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background">

    <ImageView
        android:id="@+id/appLogo"
        android:src="@drawable/message_text"
        android:layout_marginTop="100dp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_marginTop="20dp"
        android:padding="16dp"
        android:background="@drawable/rounded_corner_ll"
        android:orientation="horizontal"
        android:layout_below="@+id/appLogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/otp_ll1">
            <ImageView
                android:background="@drawable/phone_android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <EditText
                android:layout_marginLeft="6dp"
                android:hint="@string/enter_otp"
                android:id="@+id/et_otp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:ems="10"
                android:inputType="number" />
    </LinearLayout>

    <Button
        android:background="@drawable/login_button"
        android:layout_marginTop="16dp"
        android:id="@+id/verify_otp"
        android:textColor="#fff"
        android:text="@string/verify"
        android:layout_below="@+id/otp_ll1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_marginTop="16dp"
        android:layout_below="@+id/verify_otp"
        android:textColor="#fff"
        android:id="@+id/otp_resend"
        android:text="@string/resend_otp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:textColor="#fff"
        android:layout_alignParentBottom="true"
        android:id="@+id/otp_register_with_another_number"
        android:text="@string/register_with_another_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>
