<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingBottom="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background">

    <ImageView
        android:id="@+id/appLogo"
        android:src="@drawable/logo"
        android:layout_margin="20dp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_corner_ll"
        android:orientation="vertical"
        android:layout_below="@+id/appLogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/user_register_ll1">

        <LinearLayout
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:background="@drawable/user_outline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <EditText
                android:layout_marginLeft="6dp"
                android:hint="@string/name"
                android:id="@+id/et_user_register_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:ems="10"
                android:inputType="text" />
        </LinearLayout>
        <View
            android:background="#9E9E9E"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>
        <LinearLayout
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:background="@drawable/email_outline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <EditText
                android:layout_marginLeft="6dp"
                android:hint="@string/email"
                android:id="@+id/et_user_register_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:ems="10"
                android:inputType="textEmailAddress" />
        </LinearLayout>

        <View
            android:background="#9E9E9E"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <LinearLayout
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:background="@drawable/phone_outline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <EditText
                android:layout_marginLeft="6dp"
                android:hint="@string/phone_number"
                android:id="@+id/et_user_register_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:ems="10"
                android:inputType="number" />
        </LinearLayout>
        <View
            android:background="#9E9E9E"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>
        <LinearLayout
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:background="@drawable/lock_outline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <EditText
                android:layout_marginLeft="6dp"
                android:hint="@string/password"
                android:id="@+id/et_user_register_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:ems="10"
                android:inputType="textPassword" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:background="@drawable/login_button"
        android:layout_marginTop="16dp"
        android:id="@+id/register"
        android:textColor="#fff"
        android:text="@string/register"
        android:layout_below="@+id/user_register_ll1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:textColor="#fff"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:id="@+id/user_register_login"
        android:text="@string/login_here"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>