<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingBottom="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background">

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ImageView
        android:id="@+id/appLogo"
        android:layout_margin="20dp"
        android:src="@drawable/logo"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_corner_ll"
        android:orientation="vertical"
        android:layout_below="@+id/appLogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/user_login_ll1">

        <LinearLayout
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:background="@drawable/user_outline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <EditText
                android:layout_marginLeft="6dp"
                android:hint="@string/name"
                android:id="@+id/et_user_login_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:ems="10"
                android:inputType="text" />
        </LinearLayout>
        <View
            android:background="#9E9E9E"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>
        <LinearLayout
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:background="@drawable/email_outline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <EditText
                android:layout_marginLeft="6dp"
                android:hint="@string/email"
                android:id="@+id/et_user_login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:ems="10"
                android:inputType="textEmailAddress" />
        </LinearLayout>

        <View
            android:background="#9E9E9E"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>
        <LinearLayout
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:background="@drawable/gender_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <Spinner
                android:id="@+id/spinner"
                android:layout_marginLeft="6dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:prompt="@string/register_with_another_number" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:background="@drawable/login_button"
        android:layout_marginTop="16dp"
        android:id="@+id/sign_in"
        android:textColor="#fff"
        android:text="@string/sign_in"
        android:layout_below="@+id/user_login_ll1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:clickable="true"
        android:focusable="true"
        android:id="@+id/user_login_via_facebook"
        android:padding="10dp"
        android:background="@drawable/facebook_background"
        android:layout_above="@+id/user_login_via_google"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:background="@drawable/facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:typeface="sans"
            android:textColor="#fff"
            android:paddingLeft="16dp"
            android:text="@string/sign_in_fb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:clickable="true"
        android:focusable="true"
        android:id="@+id/user_login_via_google"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/google_background"
        android:layout_above="@+id/user_login_with_another_number"
        android:padding="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:background="@drawable/google"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:textColor="#fff"
            android:text="@string/sign_in_google"
            android:paddingLeft="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <TextView
        android:textColor="#fff"
        android:layout_alignParentBottom="true"
        android:id="@+id/user_login_with_another_number"
        android:text="@string/register_with_another_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>