<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background_image"
    tools:context="com.gmonetix.findandgo.user_profile.ProfileActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <include
            layout="@layout/toolbar"
            />
    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:id="@+id/profile_activity_ll2"
        android:padding="20dp"
        android:layout_below="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="190dp">
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:id="@+id/profileImage"
            app:civ_border_width="1dp"
            app:civ_border_color="#9E9E9E"
            android:src="@drawable/user_default_image"
            android:layout_width="150dp"
            android:layout_height="150dp" />

        <android.support.design.widget.FloatingActionButton
            app:fabSize="auto"
            android:id="@+id/profile_activity_change_pic"
            android:src="@drawable/camera_icon"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/profile_activity_ll1"
        android:background="@drawable/rounded_corner_ll"
        android:layout_below="@+id/profile_activity_ll2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/profile_activity_rl1"
            android:gravity="center"
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/iv1"
                android:background="@drawable/user_outline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_toRightOf="@+id/iv1"
                android:layout_marginLeft="6dp"
                android:layout_centerVertical="true"
                android:text="@string/name"
                android:id="@+id/profile_activity_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <ImageView
                android:id="@+id/profile_activity_edit_name"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:background="@drawable/edit_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>
        <View
            android:id="@+id/profile_activity_view1"
            android:layout_below="@+id/profile_activity_rl1"
            android:background="#9E9E9E"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>
        <RelativeLayout
            android:layout_below="@+id/profile_activity_view1"
            android:id="@+id/profile_activity_rl2"
            android:gravity="center"
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/iv2"
                android:background="@drawable/email_outline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_centerVertical="true"
                android:layout_marginLeft="6dp"
                android:layout_toRightOf="@+id/iv2"
                android:text="@string/email"
                android:id="@+id/profile_activity_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <ImageView
                android:id="@+id/profile_activity_edit_email"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:background="@drawable/edit_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>
        <View
            android:id="@+id/profile_activity_view2"
            android:layout_below="@+id/profile_activity_rl2"
            android:background="#9E9E9E"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>
        <RelativeLayout
            android:layout_below="@+id/profile_activity_view2"
            android:id="@+id/profile_activity_rl3"
            android:gravity="center"
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/iv3"
                android:background="@drawable/phone_outline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_centerVertical="true"
                android:layout_marginLeft="6dp"
                android:layout_toRightOf="@+id/iv3"
                android:hint="@string/phone_number"
                android:id="@+id/profile_activity_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </RelativeLayout>
        <View
            android:layout_below="@+id/profile_activity_rl3"
            android:id="@+id/profile_activity_view3"
            android:background="#9E9E9E"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>
        <LinearLayout
            android:layout_below="@+id/profile_activity_view3"
            android:padding="16dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:background="@drawable/phone_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <Switch
                android:textColor="#9E9E9E"
                android:id="@+id/profile_activity_number_visibility"
                android:layout_marginLeft="6dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Show number to users" />
        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>
